samples/_failures_safe/1761189289_5d4698_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6186392.c: In function ‘main’:
./samples/SAFE/__tmp_c6186392.c:155:5: error: ‘size’ undeclared (first use in this function); did you mean ‘size_t’?
  155 |     size
      |     ^~~~
      |     size_t
./samples/SAFE/__tmp_c6186392.c:155:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c6186392.c:155:9: error: expected ‘;’ at end of input
  155 |     size
      |         ^
      |         ;
./samples/SAFE/__tmp_c6186392.c:155:5: error: expected declaration or statement at end of input
  155 |     size
      |     ^~~~
